--- a/README
+++ b/README
@@ -9,4 +9,4 @@ nodejs 서버 시작: node app.js
 파이썬 빌보드 to 유튜브 플레이리스트: https://github.com/aag/billboard_yt_playlist_creator/blob/master/createbillboardplaylist.py
 nodeJS playlister: https://github.com/jimcapel/playlister
 
-youtubeSearcher는 직접 
+youtubeSearcher는 직접 제작했습니다.
